# dn_llm

./: .gitignore  README.md  dataToJson.py  dialogs.txt  finetune.py  finetune2.ipynb  finetune2.py  finetune2_noComments.ipynb  finetune2_noComments.py  finetune_lora.py  generateTrainData.py  load.py  main.py  pip-shell.nix  pyproject.toml  requirements.txt  responses.txt  trainData.json  working_fintune_lora.py
.github/workflows/: create-release.yml
dn_llm/: pyproject.toml
src/dn_llm/: Dn_llm.py
src/dn_llm_czlabinger/: Dn_llm.py  main.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
